# es_statistics

./: .gitignore  README.md  pyproject.toml
es_statistics/: changeData.py  config.py  connectElasticsearch.py  searchEs.py
tests/: test_changeData.py  test_connetcElasticsearch.py  test_searchEs.py
